Fixing content alignment

--- a/src/index2.css
+++ b/src/index2.css
@@ -19,7 +19,8 @@ body {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
+    align-content: flex-start;
     justify-content: center;
     flex-direction: column;
 
